--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -92,19 +92,31 @@ jQuery(document).ready(function() {
     $('table.multi').find('tbody').append('<tr><td><a class="btn btn-success add-row" href="#">add</a></td></tr>');
     // add / remove rows to list items
     $('.row.multi').each(function() {
-        $(this).children().last().append('<p><a class="btn btn-warning delete-row" href="#">delete</a></p><p><a class="btn btn-success add-row" href="#">add</a></p>');
+        $(this).children().last().append('<p> </p><p><a class="btn btn-warning delete-row" href="#">delete</a></p><p><a class="btn btn-success add-row" href="#">add</a></p>');
     });
 
     var addrow = function(event) {
         event.preventDefault();
         var maxrows = 6;
-        $(this).closest('table').hasClass('manyrows') ? maxrows = 30 : false;
-        $(this).closest('tr').siblings().length == (maxrows - 1) ? $(this).hide() : false;
-        if ( $(this).closest('tr').siblings().length < maxrows ) {
-            var row = $(this).closest('tr').prev().clone(true).get(0);
-            $(row).find('.noclone').remove();
-            $(row).insertBefore($(this).closest('tr'));
-            preprow(row);
+        if (!$(this).closest('table')) {
+            $(this).closest('.row').hasClass('manyrows') ? maxrows = 30 : false;
+            $(this).closest('.row').siblings('.row').length == (maxrows - 1) ? $(this).hide() : false;
+            if ( $(this).closest('.row').siblings('.row').length < maxrows ) {
+                var row = $(this).closest('.row').clone(true).get(0);
+                $(row).find('.noclone').remove();
+                $(row).find('.addrow').remove();
+                $(row).insertBefore($(this).closest('.row'));
+                preprow(row);
+            }
+        } else {
+            $(this).closest('table').hasClass('manyrows') ? maxrows = 30 : false;
+            $(this).closest('tr').siblings().length == (maxrows - 1) ? $(this).hide() : false;
+            if ( $(this).closest('tr').siblings().length < maxrows ) {
+                var row = $(this).closest('tr').prev().clone(true).get(0);
+                $(row).find('.noclone').remove();
+                $(row).insertBefore($(this).closest('tr'));
+                preprow(row);
+            }
         }
     }
     $('.add-row').bind('click',addrow);
