--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -98,12 +98,12 @@ jQuery(document).ready(function() {
     var addrow = function(event) {
         event.preventDefault();
         var maxrows = 6;
+        console.log($(this).closest('table'))
         if (!$(this).closest('table')) {
             $(this).closest('.row').hasClass('manyrows') ? maxrows = 30 : false;
             $(this).closest('.row').siblings('.row').length == (maxrows - 1) ? $(this).hide() : false;
             if ( $(this).closest('.row').siblings('.row').length < maxrows ) {
                 var row = $(this).closest('.row').clone(true).get(0);
-                $(row).find('.noclone').remove();
                 $(row).find('.addrow').remove();
                 $(row).insertBefore($(this).closest('.row'));
                 preprow(row);
@@ -113,7 +113,6 @@ jQuery(document).ready(function() {
             $(this).closest('tr').siblings().length == (maxrows - 1) ? $(this).hide() : false;
             if ( $(this).closest('tr').siblings().length < maxrows ) {
                 var row = $(this).closest('tr').prev().clone(true).get(0);
-                $(row).find('.noclone').remove();
                 $(row).insertBefore($(this).closest('tr'));
                 preprow(row);
             }
@@ -127,7 +126,6 @@ jQuery(document).ready(function() {
         $(this).closest('table').hasClass('manyrows') ? maxrows = 30 : false;
         $(this).closest('tr').siblings().length == maxrows ? $(this).closest('tr').siblings().find('.add-row').show() : false;
         if ( $(this).closest('tr').siblings().length == 1 ) {
-            $(row).find('.noclone').remove();
             $(row).insertBefore($(this).closest('tr'));
             preprow(row);
         }
