--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -92,7 +92,7 @@ jQuery(document).ready(function() {
     $('table.multi').find('tbody').append('<tr><td><a class="btn btn-success add-row" href="#">add</a></td></tr>');
     // add / remove rows to list items
     $('.row.multi').each(function() {
-        $(this).children().last().append('<p>..</p><p><a class="btn btn-warning delete-row" href="#">delete</a></p><p><a class="btn btn-success add-row" href="#">add</a></p>');
+        $(this).children().last().append('<p>&nbsp;</p><p><a class="btn btn-warning delete-row" href="#">delete</a></p><p><a class="btn btn-success add-row" href="#">add</a></p>');
     });
 
     var addrow = function(event) {
@@ -105,11 +105,11 @@ jQuery(document).ready(function() {
             if ( $(this).closest('.row').siblings('.row').length < maxrows ) {
                 var row = $(this).closest('.row').clone(true).get(0);
                 $(row).find('.add-row').remove();
-                $(row).children('div').each(function() {
-                   $(this).children('p').first().addClass('visible-xs').addClass('visible-sm'); 
-                });
                 $(row).insertBefore($(this).closest('.row'));
                 preprow(row);
+                $(this).closest('.row').children('div').each(function() {
+                   $(this).children('p').first().addClass('visible-xs').addClass('visible-sm'); 
+                });
             }
         } else {
             $(this).closest('table').hasClass('manyrows') ? maxrows = 30 : false;
