--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -92,7 +92,7 @@ jQuery(document).ready(function() {
     $('table.multi').find('tbody').append('<tr><td><a class="btn btn-success add-row" href="#">add</a></td></tr>');
     // add / remove rows to list items
     $('.row.multi').each(function() {
-        $(this).children().last().append('<p>&nbsp;</p><p><a class="btn btn-warning delete-row" href="#">delete</a></p><p><a class="btn btn-success add-row" href="#">add</a></p>');
+        $(this).children().last().append('<p>&nbsp;</p><p><a class="btn btn-warning delete-row" style="display:none;" href="#">delete</a></p><p><a class="btn btn-success add-row" href="#">add</a></p>');
     });
 
     var addrow = function(event) {
@@ -104,12 +104,13 @@ jQuery(document).ready(function() {
             $(this).closest('.row').siblings('.row').length == (maxrows - 1) ? $(this).hide() : false;
             if ( $(this).closest('.row').siblings('.row').length < maxrows ) {
                 var row = $(this).closest('.row').clone(true).get(0);
-                $(row).find('.add-row').remove();
-                $(row).insertBefore($(this).closest('.row'));
-                preprow(row);
-                $(this).closest('.row').children('div').each(function() {
+                $(row).children('div').each(function() {
                    $(this).children('p').first().addClass('visible-xs').addClass('visible-sm'); 
                 });
+                $(row).insertAfter($(this).closest('.row'));
+                preprow(row);
+                $(this).closest('.row').find('.delete-row').show();
+                $(this).closest('.row').find('.add-row').hide();
             }
         } else {
             $(this).closest('table').hasClass('manyrows') ? maxrows = 30 : false;
