--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -106,7 +106,7 @@ jQuery(document).ready(function() {
                 $(row).children('div').each(function() {
                    $(this).children('p').first().addClass('visible-xs').addClass('visible-sm'); 
                 });
-                $(this).closest('.row').append('<hr class="visible-xs visible-sm" style="color:#bbb;"></hr>');
+                $(this).closest('.row').append('<hr class="visible-xs visible-sm" style="background-color:#bbb;"></hr>');
                 $(row).insertAfter($(this).closest('.row'));
                 preprow(row);
                 $(this).closest('.row').find('.add-row').parent().hide();
@@ -239,7 +239,7 @@ body {
     font-size:1.2em;
 }
 hr {
-    color:#333;
+    background-color:#333;
 }
 #container {
     margin:0;
@@ -606,43 +606,41 @@ input.bigfield{
 
     <h3>Fifth year qualifications</h3>
 
-	<div class="row">
-	    <div class="col-md-12">		
-	        <table class="multi manyrows">
-                <thead>
-                    <tr>
-                        <th>Subject</th>
-                        <th>School year taken</th>
-                        <th>Level of qualification</th>
-                        <th>Grade</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                		<td><select name="qualification_subject" class="select2this">
-                		    <option></option>
-                		    {% for opt in selections.subjects %}
-                		        <option>{{ opt }}</option>
-                		    {% endfor %}
-                		</select></td>
-                		<td><select name="qualification_year">
-                		    <option>Fifth year</option>
-                		</select></td>
-                		<td><select name="qualification_level">
-                		    <option></option>
-                		    {% for opt in selections.levels %}
-                		        <option>{{ opt }}</option>
-                		    {% endfor %}
-                		</select></td>
-                		<td><select name="qualification_grade">
-                		    <option></option>
-                		    {% for opt in selections.grades %}
-                		        <option>{{ opt }}</option>
-                		    {% endfor %}
-                		</select></td>
-                    </tr>
-                </tbody>
-	        </table>
+	<div class="row multi manyrows">
+	    <div class="col-md-3">
+            <p>Subject</p>
+    		<p><select name="qualification_subject" class="form-control select2this">
+    		    <option></option>
+    		    {% for opt in selections.subjects %}
+    		        <option>{{ opt }}</option>
+    		    {% endfor %}
+    		</select></p>
+    	</div>
+    	<div class="col-md-2">
+            <p>School year taken</p>
+    		<p><select name="qualification_year" class="form-control">
+    		    <option>Fifth year</option>
+    		</select></p>
+    	</div>
+    	<div class="col-md-3">
+            <p>Level of qualification</p>
+    		<td><select name="qualification_level" class="form-control">
+    		    <option></option>
+    		    {% for opt in selections.levels %}
+    		        <option>{{ opt }}</option>
+    		    {% endfor %}
+    		</select></td>
+    	</div>
+    	<div class="col-md-2">
+            <p>Grade</p>
+    		<p><select name="qualification_grade" class="form-control">
+    		    <option></option>
+    		    {% for opt in selections.grades %}
+    		        <option>{{ opt }}</option>
+    		    {% endfor %}
+    		</select></p>
+    	</div>
+    	<div class="col-md-2">
 	    </div>
 	</div>
 
@@ -650,44 +648,42 @@ input.bigfield{
 
     <h3>Sixth year / other qualifications</h3>
 
-	<div class="row">
-	    <div class="col-md-12">		
-	        <table class="multi manyrows">
-                <thead>
-                    <tr>
-                        <th>Subject</th>
-                        <th>School year taken</th>
-                        <th>Level of qualification</th>
-                        <th>Grade</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                		<td><select name="qualification_subject" class="select2this">
-                		    <option></option>
-                		    {% for opt in selections.subjects %}
-                		        <option>{{ opt }}</option>
-                		    {% endfor %}
-                		</select></td>
-                		<td><select name="qualification_year">
-                		    <option>Sixth year</option>
-                		    <option>Other</option>
-                		</select></td>
-                		<td><select name="qualification_level">
-                		    <option></option>
-                		    {% for opt in selections.levels %}
-                		        <option>{{ opt }}</option>
-                		    {% endfor %}
-                		</select></td>
-                		<td><select name="qualification_grade">
-                		    <option></option>
-                		    {% for opt in selections.grades %}
-                		        <option>{{ opt }}</option>
-                		    {% endfor %}
-                		</select></td>
-                    </tr>
-                </tbody>
-	        </table>
+	<div class="row multi manyrows">
+	    <div class="col-md-3">
+            <p>Subject</p>
+    		<p><select name="qualification_subject" class="form-control select2this">
+    		    <option></option>
+    		    {% for opt in selections.subjects %}
+    		        <option>{{ opt }}</option>
+    		    {% endfor %}
+    		</select></p>
+        </div>
+	    <div class="col-md-2">
+            <p>School year taken</p>
+    		<p><select name="qualification_year" class="form-control">
+    		    <option>Sixth year</option>
+    		    <option>Other</option>
+    		</select></p>
+        </div>
+	    <div class="col-md-3">
+            <p>Level of qualification</p>
+    		<p><select name="qualification_level" class="form-control">
+    		    <option></option>
+    		    {% for opt in selections.levels %}
+    		        <option>{{ opt }}</option>
+    		    {% endfor %}
+    		</select></p>
+        </div>
+	    <div class="col-md-2">
+            <p>Grade</p>
+    		<p><select name="qualification_grade" class="form-control">
+    		    <option></option>
+    		    {% for opt in selections.grades %}
+    		        <option>{{ opt }}</option>
+    		    {% endfor %}
+    		</select></p>
+        </div>
+	    <div class="col-md-2">
 	    </div>
 	</div>
 
